Revert "Fix clear button on mobile"
This reverts commit f992d37b04139caa811cc28e7b287722aafc57b0.

--- a/assets/css/public/_details-page.scss
+++ b/assets/css/public/_details-page.scss
@@ -368,20 +368,6 @@
     position: relative; // Add this line to set position context for the clear button
   }
 
-  .filter-module__item.keyword-item .keyword-input-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  @media (min-width: 576px) {
-    .filter-module__item.keyword-item .keyword-input-wrapper {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-    }
-  }
-
   .filter-label {
     font-size: 14px;
     font-weight: bold;
@@ -611,10 +597,6 @@
       display: none;
     }
 
-    .filter-buttons {
-      width: 100%;
-    }
-
     .follow-tooltip {
 
       &__inner {
@@ -623,35 +605,26 @@
       }
     }
 
-     .filter-module {
-      .keyword-item {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto;
+    .filter-module {
+      flex-direction: column;
+      
+      &__item {
+        width: 100%;
+        margin-bottom: 10px;
       }
+    }
 
-      .filter-label {
-        grid-row: 1;
-      }
+    .filter-buttons {
+      width: 100%;
+    }
 
-      .keyword-input-wrapper {
-        grid-row: 2;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-      }
-
-      input.filter-input { }
-
-      .filter-button {
-        width: auto;
-        height: auto;
-        margin-top: 15px; // nudge the clear button down
-      }
+    .filter-button {
+      width: 100%;
     }
   }
 
   // DESKTOP
+
   @media screen
   and (min-device-width: 768px) {
 
